# mutli-tool-prototype

./: .gitignore  GIT_PUSH_SUMMARY.md  LICENSE  PROJECT_DOCUMENTATION.md  README.md  run_app.bat
backend/: README.md  main.py  requirements.txt
backend/services/: ai_service.py  file_service.py  pdf_service.py  prompt_service.py  summarization_service.py
frontend/: package.json  vite.config.js
frontend/src/: index.html  main.js  styles.css
policy-prototype/: PROJECT_PLAN.md
policy-prototype/backend/: config.py  main.py
policy-prototype/backend/routers/: health.py  policy.py  search.py
policy-prototype/backend/services/: app_info_service.py
policy-prototype/backend/services/policy/: chunking_service.py  embedding_service.py  file_service.py  llm_service.py  pdf_service.py  prompt_service.py  vector_store_service.py
policy-prototype/llama.cpp/: prompt.txt
policy-prototype/policy_data/vector_store/: default_client_embeddings.jsonl
policy-prototype/src-tauri/: Cargo.toml  tauri.conf.json
policy-prototype/src-tauri/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
