[package]
name = "policy_prototype"
version = "0.1.0"
description = "Policy-Prototype Tauri App"
authors = ["Your Name"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "policy_prototype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
